logs/flasky.log
2023-11-22 16:13:46,057 INFO: Flasky startup [in C:\Py\Flasky\app\__init__.py:55]
2023-11-22 16:13:51,526 ERROR: Exception on /index [GET] [in C:\Py\venv\Lib\site-packages\flask\app.py:1414]
Traceback (most recent call last):
  File "C:\Py\venv\Lib\site-packages\flask\app.py", line 2190, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Py\venv\Lib\site-packages\flask\app.py", line 1486, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Py\venv\Lib\site-packages\flask\app.py", line 1484, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Py\venv\Lib\site-packages\flask\app.py", line 1469, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Py\venv\Lib\site-packages\flask_login\utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Py\Flasky\app\routes.py", line 41, in index
    return render_template('index.html',title='Home',form=form,posts=posts.items, next_url=next_url, prev_url=prev_url)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Py\venv\Lib\site-packages\flask\templating.py", line 151, in render_template
    return _render(app, template, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Py\venv\Lib\site-packages\flask\templating.py", line 132, in _render
    rv = template.render(context)
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Py\venv\Lib\site-packages\jinja2\environment.py", line 1301, in render
    self.environment.handle_exception()
  File "C:\Py\venv\Lib\site-packages\jinja2\environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Py\Flasky\app\templates\index.html", line 1, in top-level template code
    {% extends 'base.html' %}
  File "C:\Py\venv\Lib\site-packages\jinja2\environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Py\Flasky\app\templates\base.html", line 87, in template
    $(destElem).text("{{_('Error: could not contact server!)'}}");
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: unexpected '}', expected ')'
2023-11-25 21:13:43,804 INFO: Flasky startup [in C:\Py\Flasky\app\__init__.py:55]
2023-11-28 19:51:34,085 INFO: Flasky startup [in C:\Py\Flasky\app\__init__.py:55]
2024-03-05 05:13:12,559 INFO: Flasky startup [in C:\Py\Flasky\app\__init__.py:55]
